kubernetes/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-backend-svc
  namespace: my-namespace
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
